force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>