force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Expires__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>