force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Group_Id__c</fullName>
    <inlineHelpText>The chatter group ID used in communication with ProcessingHub</inlineHelpText>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>