force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>