force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Return_URL__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Return_URL__c</fullName>
    <label>Return URL</label>
    <type>Url</type>
</CustomField>