force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Secret_Token__c</fullName>
    <label>Secret Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>