force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/fields/paysepa__Token_URL__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Token_URL__c</fullName>
    <label>Token URL</label>
    <type>Url</type>
</CustomField>