force-app/main/default/objects/paysepa__ProcessingHub_Setting__c/listViews/paysepa__All.listView-meta.xml
<ListView>
    <fullName>paysepa__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>